<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ike_controller</name>
  <version>0.0.0</version>
  <description>The ike_controller package</description>
  <maintainer email="beike315@icloud.com">Tatsuhiro Ikebe</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>libgoogle-glog-dev</depend>
  <depend>libatlas-base-dev</depend>
  <depend>libeigen3-dev</depend>
  <depend>libsuitesparse-dev</depend>
  <depend>libceres-dev</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <exec_depend>ike_localization</exec_depend>
  <exec_depend>ike_map_server</exec_depend>
  <exec_depend>ike_planner</exec_depend>
  <depend>nav2_util</depend>
  <depend>ike_nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
