<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ike_launch</name>
  <version>0.0.0</version>
  <description>The ike_launch package</description>
  <maintainer email="beike315@icloud.com">Tatsuhiro Ikebe</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>ike_controller</exec_depend>
  <exec_depend>ike_localization</exec_depend>
  <exec_depend>ike_map_server</exec_depend>
  <exec_depend>ike_planner</exec_depend>
  <exec_depend>ike_nav_msgs</exec_depend>

  <exec_depend>turtlebot3_navigation2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
