<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ike_nav_server</name>
  <version>0.0.0</version>
  <description>The ike_nav_server package</description>
  <maintainer email="beike315@icloud.com">Tatsuhiro Ikebe</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>ike_controller</depend>
  <depend>ike_localization</depend>
  <depend>ike_map_server</depend>
  <depend>ike_nav_msgs</depend>
  <depend>ike_planner</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_util</depend>

  <depend>ike_nav_parameters</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
